syntax = "proto3";
option go_package = "./";
package hello;

message HelloRequest {
  string greeting = 1;
}

message HelloResponse {
  string reply = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse);

//  rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse);
//
//  rpc LotsOfGreeting(stream HelloRequest) returns (HelloResponse);

  rpc BidiHello (stream HelloRequest) returns (stream HelloResponse);
}